--- a/index.html
+++ b/index.html
@@ -2,69 +2,88 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- exibe o site corretamente com base no dispositivo do usuário -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Huddle landing page with alternating feature blocks</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Sinta-se à vontade para remover esses estilos ou personalizar em sua própria folha de estilo 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  Try It Free
+  <header>
+    <img src="images/logo.svg" alt="">
+    <div>
+      <button>try it free</button>
+    </div>
+    <header>
+    <main>
+      <section>
+        <div>
+          <h1>Build The Community Your Fans Will Love</h1>
+          <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+            Create connections with your users as you engage in genuine discussion. </p>
+            <button>Get Started For Free</button>
+        </div>
+        <div>
+          <img src="images/illustration-mockups.svg" alt="">
+        </div>
+      </section>
 
-  Build The Community Your Fans Will Love
+      <article>
+        <h1>Grow Together</h1>
+        <p>Generate meaningful discussions with your audience and build a strong, loyal community. 
+          Think of the insightful conversations you miss out on with a feedback form.</p>
+        <img src="images/illustration-grow-together.svg" alt="">
+      </article>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+      <article>
+        <img src="images/illustration-flowing-conversation.svg" alt="">
+        <h1>Flowing Conversations</h1>
+        <p> You wouldn't paginate a conversation in real life, so why do it online? Our threads 
+          have just-in-time loading for a more natural flow.</p>
+      </article>
 
-  Get Started For Free
+      <article>
+        <h1>Your Users</h1>
+        <p> It takes no time at all to integrate Huddle with your app's authentication solution. 
+          This means, once signed in to your app, your users can start chatting immediately.</p>
+        <img src="images/illustration-your-users.svg" alt="">
+      </article>
 
-  Grow Together
+      <aside>
+        <h1>Ready To Build Your Community?</h1>
+        <button>Get Started For Free</button>
+      </aside>
+    </main>
 
-  Generate meaningful discussions with your audience and build a strong, loyal community. 
-  Think of the insightful conversations you miss out on with a feedback form. 
-
-  Flowing Conversations
-
-  You wouldn't paginate a conversation in real life, so why do it online? Our threads 
-  have just-in-time loading for a more natural flow.
-
-  Your Users
-
-  It takes no time at all to integrate Huddle with your app's authentication solution. 
-  This means, once signed in to your app, your users can start chatting immediately.
-
-  Ready To Build Your Community?
-
-  Get Started For Free
-
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-  incididunt ut labore et dolore magna aliqua
-
-  +1-543-123-4567
-  example@huddle.com
-
-  About Us
-  What We Do
-  FAQ
-
-  Career
-  Blog
-  Contact Us
-
-  &copy; Copyright 2018 Huddle. All rights reserved.
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+    <footer>
+      <img src="images/logo.svg" alt="">
+      <ul>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+          incididunt ut labore et dolore magna aliqua</li>
+        <li>+1-543-123-4567</li>
+        <li>example@huddle.com</li>
+        <li>About Us</li>
+        <li>What We Do</li>
+        <li>FAQ</li>
+        <li>Career</li>
+        <li>  Blog</li>
+        <li>Contact Us</li>
+      </ul>
+      <ul>
+        <li><img src="images/facebook (2).png" width="24px" height="24px" alt=""></li>
+        <li><img src="images/twitter (1).png" width="24px" height="24px" alt=""></li>
+        <li><img src="images/instagram (1).png" width="24px" height="24px" alt=""></li>
+      </ul>
+      <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+    </footer>
+    
 </body>
 </html>
