--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
   <header id="cabecalho">
     <div class="menu">
       <img src="images/logo.svg" alt="">
-      <button>try it free</button>
+      <button id="button-menu">try it free</button>
     </div>
   </header>
 
     <main id="container">
-      <article id="txt-1">
+      <article id="txt-1" class="bg">
         <h1>Build The Community Your Fans Will Love</h1>
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
           Create connections with your users as you engage in genuine discussion. </p>
-          <button>Get Started For Free</button>
+          <button id="button-2">Get Started For Free</button>
       </article>
-      <aside id="img-1">
+      <aside id="img-1" class="bg">
         <img class="" src="images/illustration-mockups.svg" width="650px" height="auto" alt="">
       </aside>
     
