--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
 
 
       <aside id="chamada-acao">
-        <h1>Ready To Build Your Community?</h1>
-        <button>Get Started For Free</button>
+        <div class="caixa"> 
+          <h1>Ready To Build Your Community?</h1>
+          <button id="button-3">Get Started For Free</button>
+        </div>
       </aside>
     </main>
 
