--- a/index.html
+++ b/index.html
@@ -74,27 +74,48 @@
       </aside>
     </main>
 
+
+
     <footer id="rodape">
-      <img src="images/logo.svg" alt="">
-      <ul>
-        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-          incididunt ut labore et dolore magna aliqua</li>
-        <li>+1-543-123-4567</li>
-        <li>example@huddle.com</li>
+
+      <div class="box-1">
+        <ul>
+          <li><img class="logo-rodape" src="images/logo.svg" alt=""></li>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+            incididunt ut labore et dolore magna aliqua</li>
+          <li>+1-543-123-4567</li>
+          <li><a href="mailto:example@huddle.com">example@huddle.com</a></li>
+        </ul>
+      </div>
+
       
-        <li>About Us</li>
-        <li>What We Do</li>
-        <li>FAQ</li>
-        <li>Career</li>
-        <li>  Blog</li>
-        <li>Contact Us</li>
-      </ul>
-      <ul>
-        <li><img src="images/facebook (2).png" width="24px" height="24px" alt=""></li>
-        <li><img src="images/twitter (1).png" width="24px" height="24px" alt=""></li>
-        <li><img src="images/instagram (1).png" width="24px" height="24px" alt=""></li>
-      </ul>
+      <div class="box-2">
+        <ul>
+          <li><a href="">About Us</a></li>
+          <li><a href="">What We Do</a></li>
+          <li><a href="">FAQ</a></li>
+        </ul>
+      </div>
+
+      <div class="box-3">
+        <ul>
+          <li><a href="">Career</a></li>
+          <li> <a href=""> Blog</a></li>
+          <li><a href="">Contact Us</a></li>
+        </ul>
+      </div>
+
+      
+      <div class="box-4">
+        <ul>
+          <li><a href=""><img src="images/facebook (2).png" width="24px" height="24px" alt=""></a></li>
+          <li><a href=""><img src="images/twitter (1).png" width="24px" height="24px" alt=""></a></li>
+          <li><a href=""><img src="images/instagram (1).png" width="24px" height="24px" alt=""></a></li>
+        </ul>
+      </div>
+
       <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
+
     </footer>
 
 </body>
