--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
   <link rel="stylesheet" href="css/cabecalho.css">
   <link rel="stylesheet" href="css/conteudo.css">
   <link rel="stylesheet" href="css/rodape.css">
+  <link rel="stylesheet" href="css/responsivo.css">
 </head>
 <body>
 
   <header id="cabecalho">
     <div class="menu">
-      <img src="images/logo.svg" alt="">
+      <img class="img-cabecalho" src="images/logo.svg" alt="">
       <button id="button-menu">try it free</button>
     </div>
   </header>
