--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/cabecalho.css">
   <link rel="stylesheet" href="css/conteudo.css">
   <link rel="stylesheet" href="css/rodape.css">
-  <link rel="stylesheet" href="css/responsivo.css">
+  <link rel="stylesheet" href="mobile.css">
 </head>
 <body>
 
