--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header id="cabecalho">
     <div class="menu">
-      <img class="img-cabecalho" src="images/logo.svg" alt="">
+      <img src="images/logo.svg" alt="">
       <button id="button-menu">try it free</button>
     </div>
   </header>
@@ -89,16 +89,16 @@
         
         <div class="box box-center mobile-box">
           <ul>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">What We Do</a></li>
-            <li><a href="#">FAQ</a></li>
+            <li><a href="#" class="link-info">About Us</a></li>
+            <li><a href="#" class="link-info">What We Do</a></li>
+            <li><a href="#" class="link-info">FAQ</a></li>
           </ul>
         </div>
         <div class="box box-center mobile-box">
           <ul>
-            <li><a href="#">Career</a></li>
-            <li> <a href="#"> Blog</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="#" class="link-info">Career</a></li>
+            <li> <a href="#" class="link-info"> Blog</a></li>
+            <li><a href="#" class="link-info">Contact Us</a></li>
           </ul>
         </div>
         
