--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/conteudo.css">
   <link rel="stylesheet" href="css/rodape.css">
   <link rel="stylesheet" href="mobile.css">
- 
+  <script src="https://kit.fontawesome.com/df38e9ef4f.js" crossorigin="anonymous"></script>
   
 </head>
 <body>
@@ -144,9 +144,9 @@
            
           <p class="email icon icon-link  icon-email"><a href="mailto:example@huddle.com">example@huddle.com</a></p>
             
-          <a href="" class="link-1">About Us</a>
+          <a href="" class="link-1 ">About Us</a>
 
-          <a href="" class="link-2">What We Do</a>
+          <a href="" class="link-2 ">What We Do</a>
 
           <a href="" class="link-3">FAQ</a>
 
