--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <a href="https://www.instagram.com/" target="_blank"><img src="images/instagram (1).png" width="24px" height="24px" alt="logotipo do instagram"></a>
           </div>
 
-          <p class="copy">&copy; Copyright 2018 Huddle.All rights reserved.</p>
+          <p class="copy">&copy; Copyright 2018 Huddle.All rights reserved.Developed by Eliezer Alves Bernardino</p>
       
   </footer>
 </body>
