--- a/index.html
+++ b/index.html
@@ -10,26 +10,24 @@
   <link rel="stylesheet" href="css/conteudo.css">
   <link rel="stylesheet" href="css/rodape.css">
   <link rel="stylesheet" href="mobile.css">
-  <script src="https://kit.fontawesome.com/df38e9ef4f.js" crossorigin="anonymous"></script>
-  
 </head>
 <body>
 
   <header id="cabecalho">
     <div class="menu">
-      <img src="images/logo.svg" alt="">
+      <img src="images/logo.svg" alt="Imagem do logotipo">
       <button id="button-menu">try it free</button>
     </div>
   </header>
 
     <main id="container">
-      <article id="txt-1" class="">
+      <article id="txt-1">
         <h1>Build The Community Your Fans Will Love</h1>
         <p>Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
           Create connections with your users as you engage in genuine discussion. </p>
           <button id="button-2">Get Started For Free</button>
       </article>
-      <aside id="img-1" class="">
+      <aside id="img-1">
         <img src="images/illustration-mockups.svg" width="650px" height="auto" alt="imagem ilustrada">
       </aside>
     
